[project]
name = "nerve"
version = "0.1.0"
description = "NERVE specification, reference types, validators, and TLA+ model for multi-agent behavioral integrity"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Ravi Kiran Kadaboina" }]
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
mcp = [
    "mcp>=1.0",
]

[project.scripts]
nerve-mcp = "nerve.mcp_server.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
asyncio_mode = "auto"
